--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import dependencies.Dep
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
@@ -5,9 +7,10 @@ buildscript {
         google()
         jcenter()
     }
+
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath Dep.GradlePlugin.android
+        classpath Dep.GradlePlugin.kotlin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,8 +22,30 @@ allprojects {
         google()
         jcenter()
     }
-}
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    configurations {
+        ktlint
+    }
+
+    dependencies {
+        ktlint Dep.Ktlint.ktlint
+    }
+
+    task ktlintMain(type: JavaExec, group: "verification") {
+        description = "Check Kotlin code style."
+        classpath = configurations.ktlint
+        main = "com.pinterest.ktlint.Main"
+        args "src/**/*.kt", "--android", "--color", "--reporter=plain",
+                "--reporter=checkstyle,output=${buildDir}/reports/ktlint-results.xml"
+        ignoreExitValue true
+    }
+
+    task ktlintFormat(type: JavaExec, group: "formatting") {
+        description = "Fix Kotlin code style deviations."
+        classpath = configurations.ktlint
+        main = "com.pinterest.ktlint.Main"
+        args "-F", "src/**/*.kt", !"src/**/*Test.kt"
+        ignoreExitValue true
+    }
+
 }
