--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import dependencies.Dep
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
