--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation Dep.Epoxy.epoxy
     implementation Dep.Epoxy.databindingSupport
     kapt Dep.Epoxy.processer
+    implementation Dep.AndroidX.viewPager2
 }
