--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -14,11 +14,9 @@ jobs:
         with:
           java-version: 1.8
       - name: run ktlintCheck
-        run: ./gradlew ktlintCheck
-      - uses: actions/upload-artifact@v2
-        with:
-          name: debug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+        run: |
+          ./gradlew ktlintMain
+          ./gradlew lint
       # Danger
       - name: Setup ruby
         uses: actions/setup-ruby@v1
